<resources>
    <string name="app_name">Silence</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Username</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="nav_NightLightToast_open">Nightlight opened</string>
    <string name="nav_NightLightToast_closed">Nightlight closed</string>
    <!--    sidebar-->
    <string name="menu_home">Home</string>
    <string name="menu_want_to_go">Favorites</string>
    <string name="menu_discuss">Discuss</string>
    <string name="menu_group">Group</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_Aboutus">About Us</string>
    <string name="menu_NightMode">Night Light</string>


    <!--    aboutActivity-->
    <string name="title_activity_about_us">AboutUS</string>

    <string name="about_developers">Developers</string>
    <string name="about_developers_list" translatable="false"><i>猫少茗</i>, <i>兰兰想</i></string>

    <string name="about_basicInfo">Basic Info</string>
    <string name="about_basicInfoDetail">Basic Info Detail</string>

    <string name="about_QrCode">QrCode</string>

    <string name="about_SupportUs">Support Us</string>
    <string name="about_SupportUsDetail">Support Us Detail</string>


<!--    Login-->
    <string name="login_email">Email Address</string>
    <string name="login_passwd">Password</string>

    <string name="login_rememberpasswd">Remember Password</string>
    <string name="login_button_login">Login</string>
    <string name="login_button_signup">Sign up</string>
</resources>
